fix: increased spacing

--- a/src/style.css
+++ b/src/style.css
@@ -863,13 +863,13 @@ nav {
   }
 
   .image2 img {
-    width: 90%;
-    margin-left: 5%;
+    width: 80%;
+    margin-left: 10%;
   }
 
   .shortwidth img {
-    width: 90%;
-    margin-left: 5%;
+    width: 70%;
+    margin-left: 15%;
   }
 
   .blog {
